--- a/src/public/index.html
+++ b/src/public/index.html
@@ -42,7 +42,8 @@
     <noscript
       >Batallas de freestyle en linea.</noscript
     >
-    <div id="responsive-home"></div>
+    <div id="responsive-home">
+    </div>
     <script src="./bundle.js"></script>
   </body>
 </html>
