--- a/src/public/index.html
+++ b/src/public/index.html
@@ -39,11 +39,9 @@
     <h1 id="Mision Hip Hop" className="Mision Hip Hop" hidden>
       Mision Hip Hop
     </h1>
-    <noscript
-      >Batallas de freestyle en linea.</noscript
-    >
-    <div id="responsive-home">
-    </div>
+    <noscript>Batallas de freestyle en linea.</noscript>
+    <div id="responsive-home"></div>
+    <div id="footer-bar">Contacto: mision.hiphop.artistas@gmail.com</div>
     <script src="./bundle.js"></script>
   </body>
 </html>
